[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "RasterForge"
version = "0.1.1"
description = "RasterForge is an package for the manipulation of raster data. It includes a library and a graphical user interface (GUI) application."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["raster, gui"]
license = {text = "MIT"}
authors = [ { name = "Afonso Oliveira", email = "afe.oliveira@campus.fct.unl.pt" } ]
dependencies = [
    "numpy",
    "rasterio",
    "opencv-python",
    "PySide6",
    "matplotlib"
]

[project.optional-dependencies]
devel = [
    "black",
    "coverage",
    "flake8",
    "flake8-black",
    "flake8-builtins",
    "flake8-bugbear",
    "flake8-docstrings",
    "flake8-isort",
    "Flake8-pyproject",
    "isort",
    "pdoc",
    "pre-commit",
    "pytest >= 7.0.0",
    "pytest-cov",
]

[project.gui-scripts]
rforge = "RasterForge.gui.gui:gui"

[project.entry-points."rforge.indices"]
sr = "RasterForge.indices.index_base:sr"
ndvi = "RasterForge.indices.index_base:ndvi"
dvi = "RasterForge.indices.index_base:dvi"
rdvi = "RasterForge.indices.index_base:rdvi"
msr = "RasterForge.indices.index_base:msr"
gndvi = "RasterForge.indices.index_base:gndvi"
gari = "RasterForge.indices.index_base:gari"
idvi = "RasterForge.indices.index_base:idvi"
ndre = "RasterForge.indices.index_base:ndre"
dvi2 = "RasterForge.indices.index_base:dvi2"
grvi = "RasterForge.indices.index_base:grvi"
ndwi = "RasterForge.indices.index_base:ndwi"
ari = "RasterForge.indices.index_base:ari"
mari = "RasterForge.indices.index_base:mari"
evi = "RasterForge.indices.index_base:evi"
evi2 = "RasterForge.indices.index_base:evi2"
savi = "RasterForge.indices.index_base:savi"
msavi = "RasterForge.indices.index_base:msavi"
osavi = "RasterForge.indices.index_base:osavi"
tavi = "RasterForge.indices.index_base:tavi"
rei = "RasterForge.indices.index_base:rei"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
src_paths = ["RasterForge", "tests"]
line_length = 88
skip_gitignore = "True"

[tool.flake8]
max-line-length = 88
max-doc-length = 88
ignore = [
    "E203",
    "W503",
]
exclude = [
    ".git",
    "__pycache__",
    ".*cache",
    "build",
    "dist",
    "env",
    "venv",
    ".eggs",
    "*.egg",
    "docs",
]
docstring-convention = "google"

[tool.mypy]
python_version = "3.8"
#warn_unused_ignores = true
#ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --tb=short --strict-markers"
testpaths = [ "tests" ]
xfail_strict = "true"
markers = []